# CodexRelay

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  install.sh  pyproject.toml
.coderrelay-payload/: part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-07
.github/workflows/: apply-rebrand.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  REFERENCES.md  SIGNING.en.md  SIGNING.md
examples/: coder-relay.service  codex-relay.service  com.coder-relay.auto.plist  com.codex-relay.auto.plist
installers/windows/: CoderRelay.iss  CodexRelay.iss
scripts/: build_linux_packages.sh  build_macos_dmg.sh  build_windows_installer.ps1  cdy_launcher.py  cxr_launcher.py  package_release.py
src/coder_relay/: __init__.py  cli.py  completion.py  config.py  entrypoint.py  health.py  lifecycle.py  manager.py  storage.py  updater.py  usage.py
src/codex_relay/: __init__.py  cli.py  completion.py  config.py  entrypoint.py  errors.py  health.py  lifecycle.py  manager.py  models.py  storage.py  usage.py
tests/: conftest.py  test_cli.py  test_completion.py  test_config.py  test_health.py  test_lifecycle.py  test_manager.py  test_release_packaging.py  test_updater.py  test_usage.py
