[project]
name = "codex-relay"
version = "0.5.0"
description = "Manage Codex authentication and OpenAI-compatible API profiles with health checks and automatic failover."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CodexRelay contributors" }]
keywords = ["codex", "openai", "profile", "failover", "cli"]
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "tomlkit>=0.13",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/Lortzing/CodexRelay"
Repository = "https://github.com/Lortzing/CodexRelay"
Issues = "https://github.com/Lortzing/CodexRelay/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
codex-relay = "codex_relay.cli:main"
cr = "codex_relay.cli:main"
# Deprecated compatibility alias for users upgrading from CodexSwitchboard.
csw = "codex_relay.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
