[project]
name = "coder-relay"
version = "0.7.0"
description = "Manage accounts, profiles, and API routes for coding-agent CLIs, with Codex support and automatic failover."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CoderRelay contributors" }]
keywords = ["codex", "claude-code", "coding-agent", "profile", "failover", "cli"]
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "tomlkit>=0.13",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/Lortzing/CoderRelay"
Repository = "https://github.com/Lortzing/CoderRelay"
Issues = "https://github.com/Lortzing/CoderRelay/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
coder-relay = "coder_relay.entrypoint:main"
cdy = "coder_relay.entrypoint:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
